Style veranderd van de site

--- a/info.html
+++ b/info.html
@@ -17,9 +17,9 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
+        <li><a href="index.html">Hoofdpagina</a></li>
+        <li><a href="overmij.html">Soorten Martial Arts</a></li>
+        <li><a class="active" href="info.html">Informatie Martial Arts</a></li>
       </ul>
     </nav>
 
