--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">De beste site van Badr</h1>
+      <h1 id="hoofdtitel" class="belangrijk">Martial Arts Site van Badr</h1>
     </header>
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+        <li><a class="active" href="index.html">Hoofdpagina</a></li>
+        <li><a href="overmij.html">Soorten Martial Arts</a></li>
+        <li><a href="info.html">Informatie Martial Arts</a></li>
       </ul>
     </nav>
 
     <main>
-      <h2>Lorem Ipsum</h2>
+      <h2></h2>
 
       <div class="item">
         <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
         <p class="item-tekst">
-          <a href="http://nu.nl">Klik hier</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+          <a href="https://youtube.com">Klik hier</a> <--Voor een Info video over Martial Arts) consectetuer adipiscing elit. Aenean commodo
           ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
           ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
           enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-          a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. <a
-            href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> elementum semper nisi. Aenean
+          a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. 
+            elementum semper nisi. Aenean
           vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
           ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque
           rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
