--- a/index.html
+++ b/index.html
@@ -24,21 +24,13 @@
     </nav>
 
     <main>
-      <h2></h2>
+      <h2>Home</h2>
 
       <div class="item">
         <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
         <p class="item-tekst">
-          <a href="https://youtube.com">Klik hier</a> <--Voor een Info video over Martial Arts) consectetuer adipiscing elit. Aenean commodo
-          ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-          a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. 
-            elementum semper nisi. Aenean
-          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
-          ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque
-          rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-        </p>
+          <a href="https://youtube.com">Klik hier</a> <--Voor een Info video over Martial Arts) 
+            Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos,foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.        </p>
       </div>
 
       <div class="item">
