--- a/info.html
+++ b/info.html
@@ -12,8 +12,9 @@
   <div class="page">
 
     <header>
-      <h1>Informatie overal!</h1>
+      <h1>Informatie Martial Arts</h1>
     </header>
+  
 
     <nav>
       <ul>
@@ -24,6 +25,7 @@
     </nav>
 
     <main>
+      <h2>Info</h2>
       <p>Informatie (van Latijn informare: "vormgeven, vormen, instrueren") is alles wat kennis toevoegt en zo
         onwetendheid, onzekerheid of onbepaaldheid vermindert. Strikt genomen is informatie pas informatie als die
         interpreteerbaar is. Interpreteren en integreren van informatie resulteert in kennis. Er verschenen in de loop
