--- a/overmij.html
+++ b/overmij.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1>Wil je meer van mij weten?</h1>
+      <h1>Soorten Martial Arts</h1>
     </header>
 
     <nav>
@@ -24,6 +24,7 @@
     </nav>
 
     <main>
+      <h2>Soorten</h2>
       <p>De persoonlijkheid is een begrip uit de psychologie en omvat een dynamisch en georganiseerd geheel van
         karakteristieken (voelen, denken, doen) die aan een persoon kunnen worden toegekend. Dit geheel van
         eigenschappen beschrijft de manier waarop een persoon in verschillende situaties zal reageren, de manier waarop
