--- a/index.html
+++ b/index.html
@@ -29,34 +29,19 @@
       <div class="item">
         <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
         <p class="item-tekst">
-          <a href="https://youtube.com">Klik hier</a> <--Voor een Info video over Martial Arts) 
-            Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos,foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.        </p>
+          Klik <a href="https://www.youtube.com/watch?v=eWrYe8UZSss">hier</a> voor een info video over Martial Arts.<br> 
+            Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos,foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.     </p>
       </div>
 
       <div class="item">
         <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
         <p class="item-tekst">
-          Etiam rhoncus. Maecenas tempus, tellus eget
-          condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
-          vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut
-          libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed
-          fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue
-          velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam,
-          scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis
-          hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-          In
-          ac dui quis mi consectetuer lacinia.
+          Maar waarom zijn vechtsporten goed voor je? Vechtsporten zijn goed voor je om verschillende redenen. Ze bevorderen fysieke fitheid door het verbeteren van kracht, uithoudingsvermogen en flexibiliteit. Ze stimuleren ook mentale discipline en zelfbeheersing, wat gunstig is voor stressmanagement en zelfvertrouwen. Vechtsporten leren je vaardigheden voor zelfverdediging en verbeteren je coördinatie en reflexen. Bovendien bieden ze een sociale gemeenschap en de kans om nieuwe mensen te ontmoeten. Het beoefenen van vechtsporten kan een gezonde levensstijl bevorderen en bijdragen aan zowel fysieke als mentale welzijn.
         </p>
       </div>
 
       <p>
-        Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed
-        aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent
-        adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero.
-        Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id,
-        imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque
-        facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit
-        quis, nisi.
+        In het volgende ga ik je soorten Martial Arts laten zien. Daarna informatie over Martial Arts.
       </p>
 
     </main>
