--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
         <p class="item-tekst">
           Klik <a href="https://www.youtube.com/watch?v=eWrYe8UZSss">hier</a> voor een info video over Martial Arts.<br> 
-            Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos,foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.     </p>
+            <br>Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos,foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.     </p>
       </div>
 
       <div class="item">
