--- a/overmij.html
+++ b/overmij.html
@@ -26,17 +26,16 @@
     <main>
       <h2>Soorten</h2>
       <p><strong>Thaiboksen</strong></p>
-      <p>Work...</p>
-      <p>De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is
-        ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het
-        verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt
-        tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij
-        onveranderlijke) aard van die persoon wordt beschouwd.</p>
-      <p>De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en
-        gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop
-        iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende
-        situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de
-        levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
+      <p>Muay Thai, ook wel bekend als Thaiboksen, is een traditionele gevechtssport met diepe wortels in Thailand. Het is een van 's werelds meest opvallende en gerespecteerde vechtsporten. Muay Thai combineert fysieke kracht, behendigheid en strategie in een indrukwekkende mix.
+
+Een Muay Thai-wedstrijd bestaat uit vijf rondes van elk drie minuten, gescheiden door korte rustpauzes. Vechters dragen traditionele shorts en handschoenen, maar het meest opvallende kenmerk is het gebruik van de ellebogen en knieën als stoot- en slagwapens. Het doel is om je tegenstander te verslaan door middel van stoten, trappen en knieën, waarbij techniek en precisie cruciaal zijn.</p>
+      <p>Muay Thai is niet alleen een sport, maar ook een levensstijl. Het vereist toewijding en discipline in zowel training als wedstrijden. Vechters worden getraind in fysieke conditie, lenigheid, uithoudingsvermogen en strategie. Bovendien heeft Muay Thai diepe culturele en spirituele wortels, en eerbied voor tradities speelt een belangrijke rol.
+
+De sport heeft internationale erkenning gekregen en wordt vaak beoefend als vorm van zelfverdediging, fitness en competitie over de hele wereld. Muay Thai biedt niet alleen fysieke voordelen, maar het versterkt ook karaktereigenschappen zoals doorzettingsvermogen en respect. Het is een fascinerende vechtsport die zowel deelnemers als toeschouwers boeit.</p>
+      <p><strong>Kickboksen</strong></p>
+      <p>Kickboksen is een opwindende vechtsport die elementen uit verschillende vechtstijlen combineert, zoals karate, boksen en Muay Thai, en is ontstaan in de jaren 1960 in Japan. Het is een sport waarbij deelnemers zowel hun vuisten als hun benen mogen gebruiken om hun tegenstanders aan te vallen, en het doel is om punten te scoren door treffers op strategische plekken op het lichaam van de tegenstander. Kickboksen vereist een combinatie van fysieke kracht, behendigheid, snelheid en technische vaardigheden.
+
+In een typische kickbokswedstrijd zijn er meerdere ronden van elk twee tot drie minuten, gescheiden door korte rustpauzes. Deelnemers dragen beschermende uitrusting, waaronder handschoenen, scheenbeschermers en een gebitsbeschermer, om letsel te minimaliseren. Kickboksen is niet alleen een competitieve sport, maar het wordt ook vaak beoefend als een vorm van fitness en zelfverdediging.</p> <p>Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p>
     </main>
 
     <footer>
