tekst erbij gedaan en info

--- a/info.html
+++ b/info.html
@@ -26,13 +26,63 @@
 
     <main>
       <h2>Info</h2>
-      <p>Informatie (van Latijn informare: "vormgeven, vormen, instrueren") is alles wat kennis toevoegt en zo
-        onwetendheid, onzekerheid of onbepaaldheid vermindert. Strikt genomen is informatie pas informatie als die
-        interpreteerbaar is. Interpreteren en integreren van informatie resulteert in kennis. Er verschenen in de loop
-        van de tijd honderden definities van het begrip. Dit komt doordat een aantal (sub)wetenschappen en
-        toepassingsgebieden het verschillend gebruiken. Informatie wordt overgedragen via communicatie. Wie een
-        boodschap overdraagt is de zender en wie de boodschap ontvangt is de ontvanger. Meestal is er
-        tweerichtingsverkeer.</p>
+      <p><strong>Muay Thai/Thaiboksen</strong></p>
+      <p>Muay Thai, ook wel bekend als Thais boksen, is een vechtsport die zijn oorsprong heeft in Thailand. Het is een discipline die zowel fysieke kracht als mentale behendigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je Muay Thai moet beoefenen:
+      </p>
+<P>Basistechnieken: Muay Thai omvat een breed scala aan stoot- en traptechnieken, waaronder de jab, cross, hook, en uppercut voor stoten, evenals de roundhouse kick, low kick, knee strike, en elbow strike voor trappen en knieën.
+
+<br>Balans en coördinatie: Muay Thai vereist een goede balans en coördinatie om technieken effectief uit te voeren en om te voorkomen dat je uit balans wordt gebracht door tegenstanders.
+
+<br>Sparring: Het sparren met een partner is een essentieel onderdeel van Muay Thai-training. Dit helpt je om je technieken in de praktijk toe te passen en je reactievermogen te verbeteren.
+
+<br>Conditie en kracht: Muay Thai vereist een goede algehele conditie en kracht, dus het is belangrijk om zowel cardio- als krachttraining op te nemen in je trainingsroutine.
+
+<br>Mentale discipline: Muay Thai leert je ook mentale discipline, concentratie en doorzettingsvermogen, aangezien het een uitdagende en veeleisende sport is.
+
+<br>Veiligheid: Draag altijd de juiste beschermende uitrusting, zoals bokshandschoenen, scheenbeschermers en een gebitsbeschermer om blessures te voorkomen.
+
+<br>Beoefening met een gekwalificeerde instructeur: Het is raadzaam om Muay Thai te leren onder begeleiding van een ervaren en gekwalificeerde instructeur om de juiste technieken aan te leren en blessures te voorkomen.
+
+</p><p>Muay Thai is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
+      <p><strong>Kickboksen</strong></p>
+      <p>Kickboksen is een populaire vechtsport die zowel fysieke kracht als technische vaardigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je kickboksen moet beoefenen:</p>
+
+<p>Basistechnieken: Kickboksen omvat een mix van stoot- en traptechnieken. Stoten omvatten technieken zoals de jab, cross, hook en uppercut, terwijl trappen onder andere de low kick, high kick en roundhouse kick bevatten.
+
+<br>Balans en coördinatie: Een goede balans en coördinatie zijn essentieel om technieken effectief uit te voeren en te voorkomen dat je uit balans wordt gebracht door je tegenstander.
+
+<br>Sparring: Het sparren met een partner is een cruciaal onderdeel van kickbokstraining. Dit helpt je om je vaardigheden in de praktijk te brengen en je reactievermogen te verbeteren.
+
+<br>Conditie en kracht: Kickboksen vereist zowel cardio- als krachttraining om je algehele fysieke conditie te verbeteren.
+
+<br>Mentale discipline: Kickboksen leert je mentale discipline, concentratie en doorzettingsvermogen, omdat het een uitdagende sport is.
+
+<br>Beschermende uitrusting: Draag altijd de juiste beschermende uitrusting, zoals bokshandschoenen, scheenbeschermers en een gebitsbeschermer om blessures te voorkomen.
+
+<br>Gekwalificeerde instructie: Het is aanbevolen om kickboksen te leren onder begeleiding van een ervaren en gekwalificeerde instructeur om de juiste technieken aan te leren en blessures te voorkomen.</p>
+
+<p>Kickboksen is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
+    <p><strong>MMA</strong></p>  
+      <p>Mixed Martial Arts (MMA) is een veeleisende vechtsport die verschillende technieken uit diverse disciplines integreert, zoals worstelen, boksen, kickboksen, Braziliaanse jiu-jitsu en meer. Als je MMA wilt beoefenen, volg dan deze stappen:</p>
+
+<p>Zoek een geschikte sportschool: Begin met het vinden van een gerenommeerde sportschool of MMA-trainingsfaciliteit met gekwalificeerde instructeurs. Zij zullen je begeleiden en helpen bij je training.
+
+<br>Basistraining: Begin met de basisprincipes van MMA, inclusief stoot- en traptechnieken, verdediging tegen stoten en trappen, en elementaire worstel- en grondtechnieken.
+
+<br>Condities opbouwen: MMA vereist een hoge mate van fysieke fitheid. Werk aan je kracht, uithoudingsvermogen, snelheid en behendigheid door middel van kracht- en conditietraining.
+
+<br>Sparring en technische training: Na het ontwikkelen van je basisvaardigheden, neem je deel aan sparringsessies en technische training om je vaardigheden in praktijk te brengen.
+
+<br>Regelkennis: Leer de regels en voorschriften van MMA, zoals wat is toegestaan en wat niet, om veiligheid en eerlijke concurrentie te waarborgen.
+
+<br>Beschermingsuitrusting: Draag de juiste beschermingsuitrusting, waaronder bokshandschoenen, scheenbeschermers en een gebitsbeschermer, om blessures te voorkomen.
+
+<br>Gedisciplineerde benadering: MMA vereist mentale discipline en zelfbeheersing. Leer respect voor je tegenstanders en beoefen de sport met integriteit.
+
+<br>Wedstrijden en competitie: Als je voldoende ervaring hebt opgebouwd en jezelf klaar acht, kun je deelnemen aan MMA-competities en -wedstrijden.</p>
+
+<p>Houd in gedachten dat MMA fysiek veeleisend is en dat veiligheid altijd voorop moet staan. Het is raadzaam om te trainen onder toezicht van deskundige coaches en te beginnen met een gedisciplineerde aanpak.</p>
+      <p>Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p>
     </main>
 
     <footer>
