--- a/overmij.html
+++ b/overmij.html
@@ -35,8 +35,20 @@ De sport heeft internationale erkenning gekregen en wordt vaak beoefend als vorm
       <p><strong>Kickboksen</strong></p>
       <p>Kickboksen is een opwindende vechtsport die elementen uit verschillende vechtstijlen combineert, zoals karate, boksen en Muay Thai, en is ontstaan in de jaren 1960 in Japan. Het is een sport waarbij deelnemers zowel hun vuisten als hun benen mogen gebruiken om hun tegenstanders aan te vallen, en het doel is om punten te scoren door treffers op strategische plekken op het lichaam van de tegenstander. Kickboksen vereist een combinatie van fysieke kracht, behendigheid, snelheid en technische vaardigheden!
 
-In een typische kickbokswedstrijd zijn er meerdere ronden van elk twee tot drie minuten, gescheiden door korte rustpauzes. Deelnemers dragen beschermende uitrusting, waaronder handschoenen, scheenbeschermers en een gebitsbeschermer, om letsel te minimaliseren. Kickboksen is niet alleen een competitieve sport, maar het wordt ook vaak beoefend als een vorm van fitness en zelfverdediging.</p> <p>Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p>
-    </main>
+In een typische kickbokswedstrijd zijn er meerdere ronden van elk twee tot drie minuten, gescheiden door korte rustpauzes. Deelnemers dragen beschermende uitrusting, waaronder handschoenen, scheenbeschermers en een gebitsbeschermer, om letsel te minimaliseren. Kickboksen is niet alleen een competitieve sport, maar het wordt ook vaak beoefend als een vorm van fitness en zelfverdediging.</p> 
+      <p><strong>MMA</strong></p>
+      <p>Mixed Martial Arts (MMA) is een vechtsport die elementen van verschillende traditionele vechtsporten combineert, zoals worstelen, boksen, kickboksen, jiu-jitsu en meer. Hier zijn enkele belangrijke aspecten van MMA:</p>
+
+<p>Technieken: MMA-vechters moeten een breed scala aan technieken beheersen, waaronder stoten, trappen, worstelen, klemmen en grondgevechten. Ze moeten zowel staand als op de grond kunnen presteren.
+
+<br>Veelzijdigheid: MMA beloont veelzijdigheid, waarbij vechters zowel in de clinch als op de mat kunnen excelleren. Dit vereist een uitgebreide training en kennis van verschillende disciplines.
+
+<br>Regels: MMA-wedstrijden hebben strikte regels en voorschriften om de veiligheid van de vechters te waarborgen. Illegale bewegingen, zoals oogsteken en bijten, zijn streng verboden.
+
+<br>Bescherming: Vechters dragen doorgaans bokshandschoenen en lichtgewicht handschoenen om hun handen te beschermen. De wedstrijden vinden plaats in een kooi of ring.
+
+<p>Training: MMA-vechters ondergaan zware fysieke en mentale training, inclusief kracht- en conditietraining, om in topvorm te blijven.</p>
+    <p>Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p></main>
 
     <footer>
       <hr />
