plaatsjes veranderd en tekst erbij gedaam

--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
       <h2>Home</h2>
 
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
+        <img class="item-plaatje" src="afbeeldingen/muay thai site ic.jpeg" alt="muay thai">
         <p class="item-tekst">
           Klik <a href="https://www.youtube.com/watch?v=eWrYe8UZSss">hier</a> voor een info video over Martial Arts.<br> 
-            <br>Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos,foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.     </p>
+            <br>Mijn site gaat over Martial Arts. Je kan hier alle info vinden over Martial Arts. Of je nou videos, foto's of tekst wil vinden over Martial Arts. Ik doe zelf ook Martial Arts dus ik kan je veel vertellen erover. Martial Arts is een vechtkunst. Het zijn verschillende soorten vechtsporten bij elkaar en dat noem je Martial Arts. Martial Arst kan heel gevaarlijk zijn, maar ook wat minder gevaarlijk. Licht eraan welke vechtsport je doet of over praat.     </p>
       </div>
 
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
+        <img class="item-plaatje" src="afbeeldingen/kickboxing.jpeg" alt="kickboks">
         <p class="item-tekst">
-          Maar waarom zijn vechtsporten goed voor je? Vechtsporten zijn goed voor je om verschillende redenen. Ze bevorderen fysieke fitheid door het verbeteren van kracht, uithoudingsvermogen en flexibiliteit. Ze stimuleren ook mentale discipline en zelfbeheersing, wat gunstig is voor stressmanagement en zelfvertrouwen. Vechtsporten leren je vaardigheden voor zelfverdediging en verbeteren je coördinatie en reflexen. Bovendien bieden ze een sociale gemeenschap en de kans om nieuwe mensen te ontmoeten. Het beoefenen van vechtsporten kan een gezonde levensstijl bevorderen en bijdragen aan zowel fysieke als mentale welzijn.
+          Maar waarom zijn vechtsporten goed voor je? Vechtsporten zijn goed voor je om verschillende redenen. Ze bevorderen fysieke fitheid door het verbeteren van kracht, uithoudingsvermogen en flexibiliteit. Ze stimuleren ook mentale discipline en zelfbeheersing, wat gunstig is voor stressmanagement en zelfvertrouwen. Vechtsporten leren je vaardigheden voor zelfverdediging en verbeteren je coördinatie en reflexen. Bovendien bieden ze een sociale gemeenschap en de kans om nieuwe mensen te ontmoeten. Het beoefenen van vechtsporten kan een gezonde levensstijl bevorderen en bijdragen aan zowel fysieke als mentale welzijn.</p>
+        <p class="tekstssss"> Martial arts, een divers scala aan gevechtspraktijken, vinden hun oorsprong over de hele wereld en weerspiegelen elk de culturele en historische achtergrond ervan. Van de stoottechnieken van Karate en Taekwondo tot de grondgevechtfocus van Braziliaans Jiu-Jitsu en Judo, bieden martial arts een rijke verscheidenheid aan zelfverdediging en persoonlijke ontwikkeling. Kung Fu, afkomstig uit China, omvat verschillende stijlen zoals Wing Chun en Shaolin. Muay Thai, de nationale sport van Thailand, legt de nadruk op krachtige stoten met vuisten, ellebogen, knieën en scheenbenen. Aikido, van Japanse oorsprong, bevordert harmonie en het omleiden van de energie van een tegenstander. De Braziliaanse vechtkunst Capoeira combineert dans, acrobatiek en muziek. Martial arts cultiveren niet alleen fysieke vaardigheden, maar ook discipline, respect en mentale veerkracht.
         </p>
       </div>
 
