--- a/info.html
+++ b/info.html
@@ -21,6 +21,7 @@
         <li><a href="index.html">Hoofdpagina</a></li>
         <li><a href="overmij.html">Soorten Martial Arts</a></li>
         <li><a class="active" href="info.html">Informatie Martial Arts</a></li>
+        <li><a href="Legends.html">Professionals</a></li>
       </ul>
     </nav>
 
