--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a class="active" href="index.html">Hoofdpagina</a></li>
         <li><a href="overmij.html">Soorten Martial Arts</a></li>
         <li><a href="info.html">Informatie Martial Arts</a></li>
+        <li><a href="Legends.html">Professionals</a></li>
       </ul>
     </nav>
 
