files toegevoegd en veranderd

--- a/overmij.html
+++ b/overmij.html
@@ -27,21 +27,21 @@
     <main>
       <img class="item-plaatje" src="afbeeldingen/kind of martial arts.webp" alt="muay thai2">
       <h2>Soorten</h2>
-      <p><strong>Thaiboksen</strong></p>
-      <p>Muay Thai, ook wel bekend als Thaiboksen, is een traditionele gevechtssport met diepe wortels in Thailand. Het is een van 's werelds meest opvallende en gerespecteerde vechtsporten. Muay Thai combineert fysieke kracht, behendigheid en strategie in een indrukwekkende mix.
+      <p class="teksttwee"><strong>Thaiboksen</strong></p>
+      <p class="teksttwee">Muay Thai, ook wel bekend als Thaiboksen, is een traditionele gevechtssport met diepe wortels in Thailand. Het is een van 's werelds meest opvallende en gerespecteerde vechtsporten. Muay Thai combineert fysieke kracht, behendigheid en strategie in een indrukwekkende mix.
 
 Een Muay Thai-wedstrijd bestaat uit vijf rondes van elk drie minuten, gescheiden door korte rustpauzes. Vechters dragen traditionele shorts en handschoenen, maar het meest opvallende kenmerk is het gebruik van de ellebogen en knieën als stoot- en slagwapens. Het doel is om je tegenstander te verslaan door middel van stoten, trappen en knieën, waarbij techniek en precisie cruciaal zijn.</p>
-      <p>Muay Thai is niet alleen een sport, maar ook een levensstijl. Het vereist toewijding en discipline in zowel training als wedstrijden. Vechters worden getraind in fysieke conditie, lenigheid, uithoudingsvermogen en strategie. Bovendien heeft Muay Thai diepe culturele en spirituele wortels, en eerbied voor tradities speelt een belangrijke rol.
+      <p class="teksttwee">Muay Thai is niet alleen een sport, maar ook een levensstijl. Het vereist toewijding en discipline in zowel training als wedstrijden. Vechters worden getraind in fysieke conditie, lenigheid, uithoudingsvermogen en strategie. Bovendien heeft Muay Thai diepe culturele en spirituele wortels, en eerbied voor tradities speelt een belangrijke rol.
 
 De sport heeft internationale erkenning gekregen en wordt vaak beoefend als vorm van zelfverdediging, fitness en competitie over de hele wereld. Muay Thai biedt niet alleen fysieke voordelen, maar het versterkt ook karaktereigenschappen zoals doorzettingsvermogen en respect. Het is een fascinerende vechtsport die zowel deelnemers als toeschouwers boeit.</p>
-      <p><strong>Kickboksen</strong></p>
-      <p>Kickboksen is een opwindende vechtsport die elementen uit verschillende vechtstijlen combineert, zoals karate, boksen en Muay Thai, en is ontstaan in de jaren 1960 in Japan. Het is een sport waarbij deelnemers zowel hun vuisten als hun benen mogen gebruiken om hun tegenstanders aan te vallen, en het doel is om punten te scoren door treffers op strategische plekken op het lichaam van de tegenstander. Kickboksen vereist een combinatie van fysieke kracht, behendigheid, snelheid en technische vaardigheden!
+      <p class="teksttwee"><strong>Kickboksen</strong></p>
+      <p class="teksttwee">Kickboksen is een opwindende vechtsport die elementen uit verschillende vechtstijlen combineert, zoals karate, boksen en Muay Thai, en is ontstaan in de jaren 1960 in Japan. Het is een sport waarbij deelnemers zowel hun vuisten als hun benen mogen gebruiken om hun tegenstanders aan te vallen, en het doel is om punten te scoren door treffers op strategische plekken op het lichaam van de tegenstander. Kickboksen vereist een combinatie van fysieke kracht, behendigheid, snelheid en technische vaardigheden!
 
 In een typische kickbokswedstrijd zijn er meerdere ronden van elk twee tot drie minuten, gescheiden door korte rustpauzes. Deelnemers dragen beschermende uitrusting, waaronder handschoenen, scheenbeschermers en een gebitsbeschermer, om letsel te minimaliseren. Kickboksen is niet alleen een competitieve sport, maar het wordt ook vaak beoefend als een vorm van fitness en zelfverdediging.</p> 
-      <p><strong>MMA</strong></p>
-      <p>Mixed Martial Arts (MMA) is een vechtsport die elementen van verschillende traditionele vechtsporten combineert, zoals worstelen, boksen, kickboksen, jiu-jitsu en meer. Hier zijn enkele belangrijke aspecten van MMA:</p>
+      <p class="teksttwee"><strong>MMA</strong></p>
+      <p class="teksttwee">Mixed Martial Arts (MMA) is een vechtsport die elementen van verschillende traditionele vechtsporten combineert, zoals worstelen, boksen, kickboksen, jiu-jitsu en meer. Hier zijn enkele belangrijke aspecten van MMA:</p>
 
-<p>Technieken: MMA-vechters moeten een breed scala aan technieken beheersen, waaronder stoten, trappen, worstelen, klemmen en grondgevechten. Ze moeten zowel staand als op de grond kunnen presteren.
+<p class="teksttwee">Technieken: MMA-vechters moeten een breed scala aan technieken beheersen, waaronder stoten, trappen, worstelen, klemmen en grondgevechten. Ze moeten zowel staand als op de grond kunnen presteren.
 
 <br>Veelzijdigheid: MMA beloont veelzijdigheid, waarbij vechters zowel in de clinch als op de mat kunnen excelleren. Dit vereist een uitgebreide training en kennis van verschillende disciplines.
 
@@ -49,8 +49,8 @@ In een typische kickbokswedstrijd zijn er meerdere ronden van elk twee tot drie 
 
 <br>Bescherming: Vechters dragen doorgaans bokshandschoenen en lichtgewicht handschoenen om hun handen te beschermen. De wedstrijden vinden plaats in een kooi of ring.
 
-<p>Training: MMA-vechters ondergaan zware fysieke en mentale training, inclusief kracht- en conditietraining, om in topvorm te blijven.</p>
-    <p>Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p></main>
+<p class="teksttwee">Training: MMA-vechters ondergaan zware fysieke en mentale training, inclusief kracht- en conditietraining, om in topvorm te blijven.</p>
+    <p class="teksttwee">Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p></main>
 
     <footer>
       <hr />
