--- a/info.html
+++ b/info.html
@@ -27,10 +27,11 @@
 
     <main>
       <h2>Info</h2>
-      <p><strong>Muay Thai/Thaiboksen</strong></p>
-      <p>Muay Thai, ook wel bekend als Thais boksen, is een vechtsport die zijn oorsprong heeft in Thailand. Het is een discipline die zowel fysieke kracht als mentale behendigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je Muay Thai moet beoefenen:
+      <img class="plaatjemma" src="afbeeldingen/info mma.jpeg">
+      <p class="teksttwee"><strong>Muay Thai/Thaiboksen</strong></p>
+      <p class="teksttwee">Muay Thai, ook wel bekend als Thais boksen, is een vechtsport die zijn oorsprong heeft in Thailand. Het is een discipline die zowel fysieke kracht als mentale behendigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je Muay Thai moet beoefenen:
       </p>
-<P>Basistechnieken: Muay Thai omvat een breed scala aan stoot- en traptechnieken, waaronder de jab, cross, hook, en uppercut voor stoten, evenals de roundhouse kick, low kick, knee strike, en elbow strike voor trappen en knieën.
+<P class="teksttwee">Basistechnieken: Muay Thai omvat een breed scala aan stoot- en traptechnieken, waaronder de jab, cross, hook, en uppercut voor stoten, evenals de roundhouse kick, low kick, knee strike, en elbow strike voor trappen en knieën.
 
 <br>Balans en coördinatie: Muay Thai vereist een goede balans en coördinatie om technieken effectief uit te voeren en om te voorkomen dat je uit balans wordt gebracht door tegenstanders.
 
@@ -44,11 +45,11 @@
 
 <br>Beoefening met een gekwalificeerde instructeur: Het is raadzaam om Muay Thai te leren onder begeleiding van een ervaren en gekwalificeerde instructeur om de juiste technieken aan te leren en blessures te voorkomen.
 
-</p><p>Muay Thai is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
-      <p><strong>Kickboksen</strong></p>
-      <p>Kickboksen is een populaire vechtsport die zowel fysieke kracht als technische vaardigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je kickboksen moet beoefenen:</p>
+</p><p class="teksttwee">Muay Thai is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
+      <p class="teksttwee"><strong>Kickboksen</strong></p>
+      <p class="teksttwee">Kickboksen is een populaire vechtsport die zowel fysieke kracht als technische vaardigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je kickboksen moet beoefenen:</p>
 
-<p>Basistechnieken: Kickboksen omvat een mix van stoot- en traptechnieken. Stoten omvatten technieken zoals de jab, cross, hook en uppercut, terwijl trappen onder andere de low kick, high kick en roundhouse kick bevatten.
+<p class="teksttwee">Basistechnieken: Kickboksen omvat een mix van stoot- en traptechnieken. Stoten omvatten technieken zoals de jab, cross, hook en uppercut, terwijl trappen onder andere de low kick, high kick en roundhouse kick bevatten.
 
 <br>Balans en coördinatie: Een goede balans en coördinatie zijn essentieel om technieken effectief uit te voeren en te voorkomen dat je uit balans wordt gebracht door je tegenstander.
 
@@ -62,11 +63,11 @@
 
 <br>Gekwalificeerde instructie: Het is aanbevolen om kickboksen te leren onder begeleiding van een ervaren en gekwalificeerde instructeur om de juiste technieken aan te leren en blessures te voorkomen.</p>
 
-<p>Kickboksen is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
-    <p><strong>MMA</strong></p>  
-      <p>Mixed Martial Arts (MMA) is een veeleisende vechtsport die verschillende technieken uit diverse disciplines integreert, zoals worstelen, boksen, kickboksen, Braziliaanse jiu-jitsu en meer. Als je MMA wilt beoefenen, volg dan deze stappen:</p>
+<p class="teksttwee">Kickboksen is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
+    <p class="teksttwee"><strong>MMA</strong></p>  
+      <p class="teksttwee">Mixed Martial Arts (MMA) is een veeleisende vechtsport die verschillende technieken uit diverse disciplines integreert, zoals worstelen, boksen, kickboksen, Braziliaanse jiu-jitsu en meer. Als je MMA wilt beoefenen, volg dan deze stappen:</p>
 
-<p>Zoek een geschikte sportschool: Begin met het vinden van een gerenommeerde sportschool of MMA-trainingsfaciliteit met gekwalificeerde instructeurs. Zij zullen je begeleiden en helpen bij je training.
+<p class="teksttwee">Zoek een geschikte sportschool: Begin met het vinden van een gerenommeerde sportschool of MMA-trainingsfaciliteit met gekwalificeerde instructeurs. Zij zullen je begeleiden en helpen bij je training.
 
 <br>Basistraining: Begin met de basisprincipes van MMA, inclusief stoot- en traptechnieken, verdediging tegen stoten en trappen, en elementaire worstel- en grondtechnieken.
 
@@ -82,8 +83,8 @@
 
 <br>Wedstrijden en competitie: Als je voldoende ervaring hebt opgebouwd en jezelf klaar acht, kun je deelnemen aan MMA-competities en -wedstrijden.</p>
 
-<p>Houd in gedachten dat MMA fysiek veeleisend is en dat veiligheid altijd voorop moet staan. Het is raadzaam om te trainen onder toezicht van deskundige coaches en te beginnen met een gedisciplineerde aanpak.</p>
-      <p>Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p>
+<p class="teksttwee">Houd in gedachten dat MMA fysiek veeleisend is en dat veiligheid altijd voorop moet staan. Het is raadzaam om te trainen onder toezicht van deskundige coaches en te beginnen met een gedisciplineerde aanpak.</p>
+      <p class="teksttwee">Er zijn veel meer stylen/soorten maar die kan ik allemaal niet benoemen want dat word dan teveel!</p>
     </main>
 
     <footer>
