tekst style veranderd

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <p>
-        In het volgende ga ik je soorten Martial Arts laten zien. Daarna informatie over Martial Arts.
+        <strong>In het volgende ga ik je soorten Martial Arts laten zien. Daarna informatie over Martial Arts.</strong>
       </p>
 
     </main>
