--- a/Legends.html
+++ b/Legends.html
@@ -27,15 +27,23 @@
       <div class="item">
         <img class="item-plaatje" src="afbeeldingen/mo ali.jpeg" alt="muay thai">
         <p class="item-titel">
-          Muhammed Ali     
+          Muhammed Ali [Boxing]   
         </p>
       </div>
       <div class="item">
       <img class="item-plaatje" src="afbeeldingen/mike tyson.jpeg" alt="muay thai">
       <p class="item-titel">
-        Mike Tyson    
+        Mike Tyson [Boxing]   
       </p>
-        
+      </div>
+        <div class="item">
+          <img class="item-plaatje" src="afbeeldingen/badrhari.jpeg" alt="muay thai">
+          <p class="item-titel">
+            Badr Hari [Kickboxing]
+          </p>
+        </div>
+      <div class="item">
+        <img class="item-plaatje" src="afbeeldingen/" alt="muay thai">
           
       </main>
 
