--- a/info.html
+++ b/info.html
@@ -26,10 +26,10 @@
     </nav>
 
     <main>
+      <img class="item-plaatje" src="afbeeldingen/thaiinfo.jpeg" alt="thaiinfo">
       <h2>Info</h2>
-      <img class="plaatjemma" src="afbeeldingen/info mma.jpeg">
       <p class="teksttwee"><strong>Muay Thai/Thaiboksen</strong></p>
-      <p class="teksttwee">Muay Thai, ook wel bekend als Thais boksen, is een vechtsport die zijn oorsprong heeft in Thailand. Het is een discipline die zowel fysieke kracht als mentale behendigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je Muay Thai moet beoefenen:
+      <p class="teksttwee">Muay Thai, ook wel bekend als Thaiboksen, is een vechtsport die zijn oorsprong heeft in Thailand. Het is een discipline die zowel fysieke kracht als mentale behendigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je Muay Thai moet beoefenen:
       </p>
 <P class="teksttwee">Basistechnieken: Muay Thai omvat een breed scala aan stoot- en traptechnieken, waaronder de jab, cross, hook, en uppercut voor stoten, evenals de roundhouse kick, low kick, knee strike, en elbow strike voor trappen en knieën.
 
