--- a/info.html
+++ b/info.html
@@ -46,7 +46,7 @@
 <br>Beoefening met een gekwalificeerde instructeur: Het is raadzaam om Muay Thai te leren onder begeleiding van een ervaren en gekwalificeerde instructeur om de juiste technieken aan te leren en blessures te voorkomen.
 
 </p><p class="teksttwee">Muay Thai is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
-      <p class="teksttwee"><strong>Kickboksen</strong></p>
+      <div><p class="teksttwee"><strong>Kickboksen</strong></p></div><img class="item-plaatje" src="afbeeldingen/kickglory.jpeg">
       <p class="teksttwee">Kickboksen is een populaire vechtsport die zowel fysieke kracht als technische vaardigheid vereist. Hier zijn enkele belangrijke aspecten van hoe je kickboksen moet beoefenen:</p>
 
 <p class="teksttwee">Basistechnieken: Kickboksen omvat een mix van stoot- en traptechnieken. Stoten omvatten technieken zoals de jab, cross, hook en uppercut, terwijl trappen onder andere de low kick, high kick en roundhouse kick bevatten.
@@ -65,7 +65,7 @@
 
 <p class="teksttwee">Kickboksen is niet alleen een effectieve vechtsport, maar het kan ook bijdragen aan zelfvertrouwen, discipline en fysieke fitheid. Het is belangrijk om de sport met respect en verantwoordelijkheid te beoefenen.</p>
     <p class="teksttwee"><strong>MMA</strong></p>  
-      <p class="teksttwee">Mixed Martial Arts (MMA) is een veeleisende vechtsport die verschillende technieken uit diverse disciplines integreert, zoals worstelen, boksen, kickboksen, Braziliaanse jiu-jitsu en meer. Als je MMA wilt beoefenen, volg dan deze stappen:</p>
+      <div><img class="item-plaatje" src="afbeeldingen/mmapica.webp"><p class="teksttwee"><br><br>Mixed Martial Arts (MMA) is een veeleisende vechtsport die verschillende technieken uit diverse disciplines integreert, zoals worstelen, boksen, kickboksen, Braziliaanse jiu-jitsu en meer. Als je MMA wilt beoefenen, volg dan deze stappen:</p></div>
 
 <p class="teksttwee">Zoek een geschikte sportschool: Begin met het vinden van een gerenommeerde sportschool of MMA-trainingsfaciliteit met gekwalificeerde instructeurs. Zij zullen je begeleiden en helpen bij je training.
 
