--- a/overmij.html
+++ b/overmij.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main>
-      <img class="item-plaatje" src="afbeeldingen/kind of martial arts.webp" alt="muay thai2">
+      <img class="item-plaatje" src="afbeeldingen/info mmmmmm.jpeg" alt="muay thai2">
       <h2>Soorten</h2>
       <p class="teksttwee"><strong>Thaiboksen</strong></p>
       <p class="teksttwee">Muay Thai, ook wel bekend als Thaiboksen, is een traditionele gevechtssport met diepe wortels in Thailand. Het is een van 's werelds meest opvallende en gerespecteerde vechtsporten. Muay Thai combineert fysieke kracht, behendigheid en strategie in een indrukwekkende mix.
