--- a/Legends.html
+++ b/Legends.html
@@ -31,9 +31,9 @@
         </p>
       </div>
       <div class="item">
-      <img class="item-plaatje" src="afbeeldingen/mike tyson.jpeg" alt="muay thai">
+      <img class="item-plaatje" src="afbeeldingen/rodtang.jpeg" alt="muay thai">
       <p class="item-titel">
-        Mike Tyson [Boxing]   
+        Rodtang [Muay Thai]   
       </p>
       </div>
         <div class="item">
@@ -43,13 +43,16 @@
           </p>
         </div>
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/" alt="muay thai">
-          
-      </main>
-
-    
-
-  </div>
-</body>
-
-</html>
+        <img class="item-plaatje" src="afbeeldingen/khabib.webp" alt="muay thai">
+        <p class="item-titel">
+          Khabib Nurmagomedov [MMA]
+        </p>
+      </div>
+      <div class="item">
+        <img class="item-plaatje" src="afbeeldingen/wrestle.webp" alt="muay thai">
+        <p class="item-titel">
+          Alexander Karelin [Wrestling]
+        </p>
+      </div>
+    </main>
+  
